--- a/sites/about.html
+++ b/sites/about.html
@@ -18,20 +18,20 @@
 <body>
   <div style="text-align:left; margin-left: 15%;">
     <a class="" href="../index.html" style="font-size: 43.2px; text-decoration: none; color: #666;">
-                      smartphone-picker
+                        <span class="accentColor">smartphone</span>-picker
                   </a>
   </div>
   <div class="main-menu">
     <div class="main-menu-text">
 
       <div class="float">
-        <a class="" href="mailto:admin@smartphone-picker.com">
+        <a class="main-menu-link" href="mailto:admin@smartphone-picker.com">
                           Contact
                       </a>
       </div>
 
       <div class="float">
-        <a class="" href="about.html">
+        <a class="main-menu-link" href="about.html">
                           About
                       </a>
       </div>
