size in detail window

--- a/index.html
+++ b/index.html
@@ -59,16 +59,17 @@
         <option value="2">Yes</option>
       </select>
     </div>
+    -->
     <div class="float">
       <p>
         Scale smartphones
       </p>
-      <select id="filterInput" class="rating_updater">
-        <option value="1" selected="selected">No</option>
-        <option value="2">Yes</option>
+      <select id="scaleInput" class="rating_updater">
+        <option value="1x" selected="selected">No</option>
+        <option value="2.2">Yes</option>
       </select>
     </div>
-    -->
+
     <div style="clear:both;">
     </div>
     <div style="overflow-x:auto;" class="settingsdiv">
