--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <p><span class="accentColor heavy">Filter</span> the hand-curated list to your liking and <span class="accentColor heavy">click</span> a smartphone to show it's specs.</p>
   </div>
   <div class="description" stlye="float:right">
-    <select id="filterInput" class="rating_updater accentColor heavy">
+    <select id="countryInput" class="rating_updater accentColor heavy">
       <option value="de" selected="selected">GERMANY</option>
       <option value="2">More Countries coming soon</option>
     </select>
@@ -265,7 +265,10 @@
       <table id="myTable" class="itemsTable">
         <thead>
           <tr>
-            <th style="min-width:85px">Price</th>
+            <th style="min-width:85px">
+              <select id="filterInput" class="filterselect rating_updater">
+              <option value="Price" selected="selected">Price</option>
+              <option value="Size">Size</option></th>
             <th>Favorite</th>
             <th></th>
             <th></th>
