--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </p>
       <select id="scaleInput" class="rating_updater">
         <option value="1x" selected="selected">No</option>
-        <option value="2.2">Yes</option>
+        <option value="2.6">Yes</option>
       </select>
     </div>
 
@@ -268,7 +268,9 @@
             <th style="min-width:85px">
               <select id="filterInput" class="filterselect rating_updater">
               <option value="Price" selected="selected">Price</option>
-              <option value="Size">Size</option></th>
+              <option value="Body-Size">Body-Size</option>
+              <option value="Screen-Size">Screen-Size</option>
+            </th>
             <th>Favorite</th>
             <th></th>
             <th></th>
