Code refactoring and filter by total score

--- a/index.html
+++ b/index.html
@@ -266,10 +266,11 @@
         <thead>
           <tr>
             <th style="min-width:85px">
-              <select id="filterInput" class="filterselect rating_updater">
+              <select id="filterInput" class="filterselect">
               <option value="Price" selected="selected">Price</option>
               <option value="Body-Size">Body-Size</option>
               <option value="Screen-Size">Screen-Size</option>
+              <option value="Total-Score">Total Score</option>
             </th>
             <th>Favorite</th>
             <th></th>
