New Rating: Design + Display

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           <tr>
             <th style="min-width: 70px">Price</th>
             <th style="min-width: 140px">Size</th>
+            <th style="min-width: 0px">Design & Display</th>
             <th style="min-width: 0px">Processor</th>
             <th style="min-width: 0px">Software Updates</th>
             <th style="min-width: 0px">Camera</th>
@@ -156,6 +157,22 @@
                   </tr>
                 </tbody>
               </table>
+            </td>
+            <td>
+
+              <span class="rating">
+              <input class="rating-input rating_updater" id="design-input-1-5" name="design-input-1" value="5" type="radio">
+              <label for="design-input-1-5" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="design-input-1-4" name="design-input-1" value="4" type="radio">
+              <label for="design-input-1-4" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="design-input-1-3" name="design-input-1" value="3" type="radio">
+              <label for="design-input-1-3" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="design-input-1-2" name="design-input-1" value="2" type="radio">
+              <label for="design-input-1-2" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="design-input-1-1" name="design-input-1" value="1" type="radio" checked="checked">
+              <label for="design-input-1-1" class="rating-star"></label>
+            </span>
+
             </td>
             <td>
 
@@ -265,7 +282,7 @@
       <table id="myTable" class="itemsTable">
         <thead>
           <tr>
-            <th style="min-width:85px">
+            <th style="min-width:85px;">
               <select id="filterInput" class="filterselect">
               <option value="Price" selected="selected">Price</option>
               <option value="Body-Size">Body-Size</option>
