--- a/sites/about.html
+++ b/sites/about.html
@@ -9,7 +9,6 @@
 
   <script type="text/javascript" src="../scripts/main.js"></script>
   <link rel="stylesheet" type="text/css" href="../css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
   <title>smartphone-picker</title>
 
@@ -55,7 +54,7 @@
           </tr>
           <tr>
             <td>
-              <p>Is the camera with <span style="font-weight:bold">20</span> MegaPixels or <span style="font-weight:bold">13</span> MegaPixels better?</p>
+              <p>Is the camera with <span style="font-weight:bold">20</span> Megapixels or <span style="font-weight:bold">13</span> Megapixels better?</p>
             </td>
             <td>
               <p>You don't know because these numbers are meaningless without context.</p>
@@ -87,7 +86,7 @@
       <p style="font-size:23px; color:black;">We read the reviews and rate the important aspects:</p>
       <p>You want to know if the <span style="font-weight:bold">processor</span> is powerful and not what his name is. </p>
       <p>You want to know if the <span style="font-weight:bold">updates</span> come regularly so you can use your smartphone for years.</p>
-      <p>You want to know if the <span style="font-weight:bold">camera</span> takes good pictures and not how many MegaPixels it has.</p>
+      <p>You want to know if the <span style="font-weight:bold">camera</span> takes good pictures and not how many Megapixels it has.</p>
       <p>You want to know if the <span style="font-weight:bold">battery</span> lasts you a day and not how many mAh it has. </p>
       <br>
       <br>
