--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <tr>
             <th style="min-width: 70px">Price</th>
             <th style="min-width: 140px">Size</th>
-            <th style="min-width: 0px">Design & Display</th>
+            <th style="min-width: 0px">Design &<span style="color:white">_</span>Display</th>
             <th style="min-width: 0px">Processor</th>
             <th style="min-width: 0px">Software Updates</th>
             <th style="min-width: 0px">Camera</th>
