--- a/sites/about.html
+++ b/sites/about.html
@@ -46,7 +46,7 @@
         <tbody>
           <tr>
             <td>
-              <p>Does this smartphone have a <span style="font-weight:bold">headphone jack</span>?</p>
+              <p>Does this smartphone have a <span class="accentColor" style="font-weight:bold">headphone jack</span>?</p>
             </td>
             <td>
               <p>You don't know because amazon sure isn't telling you.</p>
@@ -54,7 +54,7 @@
           </tr>
           <tr>
             <td>
-              <p>Is the camera with <span style="font-weight:bold">20</span> Megapixels or <span style="font-weight:bold">13</span> Megapixels better?</p>
+              <p>Is the camera with <span class="accentColor" style="font-weight:bold">20</span> Megapixels or <span class="accentColor" style="font-weight:bold">13</span> Megapixels better?</p>
             </td>
             <td>
               <p>You don't know because these numbers are meaningless without context.</p>
@@ -62,7 +62,7 @@
           </tr>
           <tr>
             <td>
-              <p>Does this smartphone get <span style="font-weight:bold">regular updates</span>?</p>
+              <p>Does this smartphone get <span class="accentColor" style="font-weight:bold">regular updates</span>?</p>
             </td>
             <td>
               <p> You don't know, how about you check the last three smartphones of the brand to estimate their trustworthiness regarding updates.</p>
@@ -70,10 +70,10 @@
           </tr>
           <tr>
             <td>
-              <p><span style="font-weight:bold">...</span></p>
+              <p><span class="accentColor" style="font-weight:bold">...</span></p>
             </td>
             <td>
-              <p><span style="font-weight:bold">...</span></p>
+              <p><span class="accentColor" style="font-weight:bold">...</span></p>
             </td>
           </tr>
         </tbody>
@@ -84,10 +84,10 @@
       <br>
       <p>I think you understand the problem, but there is a solution...</p>
       <p style="font-size:23px; color:black;">We read the reviews and rate the important aspects:</p>
-      <p>You want to know if the <span style="font-weight:bold">processor</span> is powerful and not what his name is. </p>
-      <p>You want to know if the <span style="font-weight:bold">updates</span> come regularly so you can use your smartphone for years.</p>
-      <p>You want to know if the <span style="font-weight:bold">camera</span> takes good pictures and not how many Megapixels it has.</p>
-      <p>You want to know if the <span style="font-weight:bold">battery</span> lasts you a day and not how many mAh it has. </p>
+      <p>You want to know if the <span class="accentColor" style="font-weight:bold">processor</span> is powerful and not what his name is. </p>
+      <p>You want to know if the <span class="accentColor" style="font-weight:bold">updates</span> come regularly so you can use your smartphone for years.</p>
+      <p>You want to know if the <span class="accentColor" style="font-weight:bold">camera</span> takes good pictures and not how many Megapixels it has.</p>
+      <p>You want to know if the <span class="accentColor" style="font-weight:bold">battery</span> lasts you a day and not how many mAh it has. </p>
       <br>
       <br>
       <br>
@@ -95,13 +95,12 @@
         <p style="font-size:23px; color:black;">We at smartphone-picker try our best to ensure that our smartphone data is correct and our ratings are appropriate. Still we can make mistakes and our ratings may be subject to bias.</p>
         <p>If a particular specification or aspect is vital to you, we always recommend checking with the phone seller or reading trusted reviews online.</p>
         <p>If you think that any specification or rating is wrong or simply not fitting, please contact us <a class="" href="mailto:admin@smartphone-picker.com">
-                      here
-                  </a> .
+                      here</a>.
         </p>
         <br>
         <br>
         <p>Legal stuff: </p>
-        <p><span style="font-weight:bold">smartphone-picker is not responsible for any errors or omissions, or for the results obtained from the use of this information. All information on this site is provided “as is,” with no guarantee of completeness, accuracy, timeliness or the results
+        <p><span class="accentColor" style="font-weight:bold">smartphone-picker is not responsible for any errors or omissions, or for the results obtained from the use of this information. All information on this site is provided “as is,” with no guarantee of completeness, accuracy, timeliness or the results
       obtained from the use of this information.</span></p>
       </div>
     </div>
