--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
       </table>
     </div>
 
-    <div class="filterdiv">
-      <div class="subHeader">
+    <div class="filterdiv settingsdiv">
+      <div class="subHeader" style="margin-top:0;">
         <span class="">Sort Table by</span>
       </div>
       <div style="clear:both;"></div>
