New phones and design

--- a/index.html
+++ b/index.html
@@ -22,19 +22,17 @@
   </div>
   <div class="main-menu">
     <div class="main-menu-text">
-
-      <div class="float">
-        <a class="main-menu-link" href="mailto:admin@smartphone-picker.com">
-                          Contact
-                      </a>
-      </div>
-
-      <div class="float">
-        <a class="main-menu-link" href="sites/about.html">
-                          About
-                      </a>
-      </div>
-
+      <ul class="">
+        <li>
+          <a class="main-menu-link" href="https://blog.smartphone-picker.com/">Blog</a>
+        </li>
+        <li>
+          <a class="main-menu-link" href="mailto:admin@smartphone-picker.com">Contact</a>
+        </li>
+        <li>
+          <a class="main-menu-link" href="sites/about.html">About</a>
+        </li>
+      </ul>
     </div>
   </div>
   <div class="description float">
@@ -73,7 +71,7 @@
             <th style="min-width: 140px">Size</th>
             <th style="min-width: 0px">Design &<span style="color:#12709e">_</span>Display</th>
             <th style="min-width: 0px">Processor</th>
-            <th style="min-width: 0px">Software Updates</th>
+            <th style="min-width: 0px">Software &<span style="color:#12709e">_</span>Updates</th>
             <th style="min-width: 0px">Camera</th>
             <th style="min-width: 0px">Battery</th>
             <th style="min-width: 120px">Storage Size</th>
