--- a/sites/about.html
+++ b/sites/about.html
@@ -22,19 +22,17 @@
   </div>
   <div class="main-menu">
     <div class="main-menu-text">
-
-      <div class="float">
-        <a class="main-menu-link" href="mailto:admin@smartphone-picker.com">
-                          Contact
-                      </a>
-      </div>
-
-      <div class="float">
-        <a class="main-menu-link" href="about.html">
-                          About
-                      </a>
-      </div>
-
+      <ul class="">
+        <li>
+          <a class="main-menu-link" href="https://blog.smartphone-picker.com/">Blog</a>
+        </li>
+        <li>
+          <a class="main-menu-link" href="mailto:admin@smartphone-picker.com">Contact</a>
+        </li>
+        <li>
+          <a class="main-menu-link" href="sites/about.html">About</a>
+        </li>
+      </ul>
     </div>
   </div>
   <div class="description">
