battery size and more details

--- a/sites/about.html
+++ b/sites/about.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-  <div style="text-align:left; margin-left: 15%;">
-    <a class="" href="../index.html" style="font-size: 43.2px; text-decoration: none; color: #666;">
-                        <span class="accentColor">smartphone</span>-picker
+  <div class="logo">
+    <a class="" href="index.html" style="font-size: 43.2px; text-decoration: none; color: #666;">
+                      <span class="accentColor">smartphone</span>-picker
                   </a>
   </div>
   <div class="main-menu">
