API now fetches the correct price depending on whats available Refactored code for generating table

--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
       </div>
       <div style="clear:both;"></div>
       <select id="filterInput" class="filterselect">
-      <option value="Price" selected="selected">Price</option>
-      <option value="Body-Size">Body-Size</option>
-      <option value="Screen-Size">Screen-Size</option>
-      <option value="Total-Score">Total Score</option>
+      <option value="price" selected="selected">Price</option>
+      <option value="length">Body-Size</option>
+      <option value="display">Screen-Size</option>
+      <option value="totalscore">Total Score</option>
     </select>
 
       <div style="clear:both;"></div>
