Horizontal scrolling in table Fixed table length Reworked header Refactored sorting to reduce code

--- a/index.html
+++ b/index.html
@@ -22,44 +22,37 @@
   </div>
   <div class="main-menu">
     <div class="main-menu-text">
-      <ul class="">
-        <li>
-          <a class="main-menu-link" href="https://blog.smartphone-picker.com/">Blog</a>
-        </li>
-        <li>
-          <a class="main-menu-link" href="mailto:admin@smartphone-picker.com">Contact</a>
-        </li>
-        <li>
-          <a class="main-menu-link" href="sites/about.html">About</a>
-        </li>
-      </ul>
+      <div style="float: left;">
+        <ul>
+          <li>
+            <a class="main-menu-link" href="https://blog.smartphone-picker.com/">Blog</a>
+          </li>
+          <li>
+            <a class="main-menu-link" href="mailto:admin@smartphone-picker.com">Contact</a>
+          </li>
+          <li>
+            <a class="main-menu-link" href="sites/about.html">About</a>
+          </li>
+        </ul>
+      </div>
+      <div style="float: right;">
+        <ul>
+          <li style="margin-right: 20px;">
+            <p style="font-size: 16px; margin:0;"><span class="accentColor heavy">Filter</span> the hand-curated list to your liking and <span class="accentColor heavy">click</span> a smartphone to show it's specs.</p>
+          </li>
+          <li>
+            <select id="countryInput" class="rating_updater accentColor heavy">
+              <option value="de" selected="selected">GERMANY</option>
+              <option value="2">More Countries coming soon</option>
+            </select>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-  <div class="description float">
-    <p><span class="accentColor heavy">smartphone</span>-picker helps you choose your next smartphone in this crowded market. </p>
-    <p><span class="accentColor heavy">Filter</span> the hand-curated list to your liking and <span class="accentColor heavy">click</span> a smartphone to show it's specs.</p>
-  </div>
-  <div class="description" stlye="float:right">
-    <select id="countryInput" class="rating_updater accentColor heavy">
-      <option value="de" selected="selected">GERMANY</option>
-      <option value="2">More Countries coming soon</option>
-    </select>
-  </div>
+
+
   <div class="bodydiv">
-    <!--
-    <div class="float">
-      <p>
-        Strict Filtering
-      </p>
-      <select id="filterInput" class="rating_updater">
-        <option value="1" selected="selected">No</option>
-        <option value="2">Yes</option>
-      </select>
-    </div>
-    -->
-
-
-
 
     <div style="clear:both;">
     </div>
