First implementation of toggle switch

--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
         <span class="">Scale smartphones </span>
       </div>
       <div style="clear:both;"></div>
-      <select id="scaleInput" class="rating_updater filterselect">
-      <option value="1x" selected="selected">No</option>
-      <option value="2.6">Yes</option>
-    </select>
+      <input type="checkbox" id="scaleInput" class="cbx hidden rating_updater" />
+      <label for="scaleInput" class="lbl rating_updater filterselect"></label>
+
+      </select>
     </div>
 
     <div style="overflow-x:auto;" class="itemsdiv">
