--- a/sites/about.html
+++ b/sites/about.html
@@ -16,25 +16,42 @@
 
 <body>
   <div class="logo">
-    <a class="" href="index.html" style="font-size: 43.2px; text-decoration: none; color: #666;">
+    <a class="" href="../index.html" style="font-size: 43.2px; text-decoration: none; color: #666;">
                       <span class="accentColor">smartphone</span>-picker
                   </a>
   </div>
   <div class="main-menu">
     <div class="main-menu-text">
-      <ul class="">
-        <li>
-          <a class="main-menu-link" href="https://blog.smartphone-picker.com/">Blog</a>
-        </li>
-        <li>
-          <a class="main-menu-link" href="mailto:admin@smartphone-picker.com">Contact</a>
-        </li>
-        <li>
-          <a class="main-menu-link" href="sites/about.html">About</a>
-        </li>
-      </ul>
+      <div style="float: left;">
+        <ul>
+          <li>
+            <a class="main-menu-link" href="https://blog.smartphone-picker.com/">Blog</a>
+          </li>
+          <li>
+            <a class="main-menu-link" href="mailto:admin@smartphone-picker.com">Contact</a>
+          </li>
+          <li>
+            <a class="main-menu-link" href="sites/about.html">About</a>
+          </li>
+        </ul>
+      </div>
+      <div style="float: right;">
+        <ul>
+          <li style="margin-right: 20px;">
+            <p style="font-size: 16px; margin:0;"><span class="accentColor heavy">Filter</span> the hand-curated list to your liking and <span class="accentColor heavy">click</span> a smartphone to show it's specs.</p>
+          </li>
+          <li>
+            <select id="countryInput" class="rating_updater accentColor heavy">
+              <option value="de" selected="selected">GERMANY</option>
+              <option value="2">More Countries coming soon</option>
+            </select>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
+
+
   <div class="description">
     <div>
       <p style="font-size:23px; color:black;">Shopping for a new smartphone is exhausting and frustrating. Period.</p>
