more design changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="robots" content="noindex, nofollow">
   <meta name="googlebot" content="noindex, nofollow">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=.5">
 
   <script type="text/javascript" src="scripts/main.js"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -74,7 +74,7 @@
           <tr>
             <th>Scale phones</th>
             <th>
-              <input type="checkbox" id="scaleInput" class="cbx hidden rating_updater" />
+              <input type="checkbox" id="scaleInput" class="cbx hidden rating_updater" checked="checked" />
               <label for="scaleInput" class="lbl rating_updater filterselect"></label>
             </th>
           </tr>
@@ -286,23 +286,6 @@
               </th>
             </tr>
 
-            <tr>
-              <th>SD Slot</th>
-              <th>
-                <input type="checkbox" id="sdSlotInput" class="cbx hidden rating_updater" />
-                <label for="sdSlotInput" class="lbl rating_updater filterselect"></label>
-
-              </th>
-            </tr>
-
-            <tr>
-              <th>SD Slot</th>
-              <th>
-                <input type="checkbox" id="sdSlotInput" class="cbx hidden rating_updater" />
-                <label for="sdSlotInput" class="lbl rating_updater filterselect"></label>
-
-              </th>
-            </tr>
 
 
 
