Sort descending or ascending

--- a/index.html
+++ b/index.html
@@ -69,12 +69,13 @@
             <option value="display">Screen-Size</option>
             <option value="totalscore">Total Score</option>
             </select>
+              <input type="image" src="images/sort_arrows.png" id="sorting_order" class="sorting_order" height="22px" width="22px" border="0" alt="Submit" />
             </th>
           </tr>
           <tr>
             <th>Scale phones</th>
             <th>
-              <input type="checkbox" id="scaleInput" class="cbx hidden rating_updater" checked="checked" />
+              <input type="checkbox" id="scaleInput" class="cbx hidden rating_updater" checked="" />
               <label for="scaleInput" class="lbl rating_updater filterselect"></label>
             </th>
           </tr>
